@@ -8,12 +8,9 @@ if ($transport->xpdo) {
     switch ($options[xPDOTransport::PACKAGE_ACTION]) {
         case xPDOTransport::ACTION_INSTALL:
         case xPDOTransport::ACTION_UPGRADE:
-            $modelPath = $modx->getOption('modextra_core_path', null,
-                    $modx->getOption('core_path') . 'components/modextra/') . 'model/';
-            $modx->addPackage('modextra', $modelPath);
-
+            $modx->addPackage('modextra', MODX_CORE_PATH . 'components/modextra/model/');
             $manager = $modx->getManager();
-            $objects = array();
+            $objects = [];
             $schemaFile = MODX_CORE_PATH . 'components/modextra/model/schema/modextra.mysql.schema.xml';
             if (is_file($schemaFile)) {
                 $schema = new SimpleXMLElement($schemaFile, 0, true);
@@ -24,8 +21,8 @@ if ($transport->xpdo) {
                 }
                 unset($schema);
             }
-            foreach ($objects as $tmp) {
-                $table = $modx->getTableName($tmp);
+            foreach ($objects as $class) {
+                $table = $modx->getTableName($class);
                 $sql = "SHOW TABLES LIKE '" . trim($table, '`') . "'";
                 $stmt = $modx->prepare($sql);
                 $newTable = true;
@@ -34,43 +31,69 @@ if ($transport->xpdo) {
                 }
                 // If the table is just created
                 if ($newTable) {
-                    $manager->createObjectContainer($tmp);
+                    $manager->createObjectContainer($class);
                 } else {
                     // If the table exists
                     // 1. Operate with tables
-                    $tableFields = array();
-                    $c = $modx->prepare("SHOW COLUMNS IN {$modx->getTableName($tmp)}");
+                    $tableFields = [];
+                    $c = $modx->prepare("SHOW COLUMNS IN {$modx->getTableName($class)}");
                     $c->execute();
                     while ($cl = $c->fetch(PDO::FETCH_ASSOC)) {
                         $tableFields[$cl['Field']] = $cl['Field'];
                     }
-                    foreach ($modx->getFields($tmp) as $field => $v) {
+                    foreach ($modx->getFields($class) as $field => $v) {
                         if (in_array($field, $tableFields)) {
                             unset($tableFields[$field]);
-                            $manager->alterField($tmp, $field);
+                            $manager->alterField($class, $field);
                         } else {
-                            $manager->addField($tmp, $field);
+                            $manager->addField($class, $field);
                         }
                     }
                     foreach ($tableFields as $field) {
-                        $manager->removeField($tmp, $field);
+                        $manager->removeField($class, $field);
                     }
                     // 2. Operate with indexes
-                    $indexes = array();
-                    $c = $modx->prepare("SHOW INDEX FROM {$modx->getTableName($tmp)}");
+                    $indexes = [];
+                    $c = $modx->prepare("SHOW INDEX FROM {$modx->getTableName($class)}");
                     $c->execute();
-                    while ($cl = $c->fetch(PDO::FETCH_ASSOC)) {
-                        $indexes[$cl['Key_name']] = $cl['Key_name'];
-                    }
-                    foreach ($modx->getIndexMeta($tmp) as $name => $meta) {
-                        if (in_array($name, $indexes)) {
-                            unset($indexes[$name]);
+                    while ($row = $c->fetch(PDO::FETCH_ASSOC)) {
+                        $name = $row['Key_name'];
+                        if (!isset($indexes[$name])) {
+                            $indexes[$name] = [$row['Column_name']];
                         } else {
-                            $manager->addIndex($tmp, $name);
+                            $indexes[$name][] = $row['Column_name'];
                         }
                     }
-                    foreach ($indexes as $index) {
-                        $manager->removeIndex($tmp, $index);
+                    foreach ($indexes as $name => $values) {
+                        sort($values);
+                        $indexes[$name] = implode(':', $values);
+                    }
+                    $map = $modx->getIndexMeta($class);
+                    // Remove old indexes
+                    foreach ($indexes as $key => $index) {
+                        if (!isset($map[$key])) {
+                            if ($manager->removeIndex($class, $key)) {
+                                $modx->log(modX::LOG_LEVEL_INFO, "Removed index \"{$key}\" of the table \"{$class}\"");
+                            }
+                        }
+                    }
+                    // Add or alter existing
+                    foreach ($map as $key => $index) {
+                        ksort($index['columns']);
+                        $index = implode(':', array_keys($index['columns']));
+                        if (!isset($indexes[$key])) {
+                            if ($manager->addIndex($class, $key)) {
+                                $modx->log(modX::LOG_LEVEL_INFO, "Added index \"{$key}\" in the table \"{$class}\"");
+                            }
+                        } else {
+                            if ($index != $indexes[$key]) {
+                                if ($manager->removeIndex($class, $key) && $manager->addIndex($class, $key)) {
+                                    $modx->log(modX::LOG_LEVEL_INFO,
+                                        "Updated index \"{$key}\" of the table \"{$class}\""
+                                    );
+                                }
+                            }
+                        }
                     }
                 }
             }
