@@ -1,6 +1,3 @@
 <?php
-require_once(dirname(dirname(__FILE__)) . '/modextraitem.class.php');
-
-class modExtraItem_mysql extends modExtraItem
-{
-}
+require_once (dirname(__DIR__) . '/modextraitem.class.php');
+class modExtraItem_mysql extends modExtraItem {}
